<resources>
    <string name="app_name">Foodie Hut</string>
    <string name="foddie_hut">Foddie Hut</string>
    <string name="developed_by_rudera">Developed by Rudera</string>
    <string name="rudera">Rudera</string>
    <string name="developed_by">Developed By</string>
    <string name="enjoy_resturant_quality_meals_nat_home">Enjoy Resturant Quality Meals\nat Home</string>
    <string name="next">NEXT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="login">Login</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="or_nsign_up_with">or\nSign Up With</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="create_account">Create Account</string>
    <string name="choose_location">Choose Location</string>
    <string name="to_provide_you_with_the_best_dining_experience_we_need_your_permission_to_access_your_device_s_location_by_enabling_location_services_we_can_offer_persionalized_restaurant_recommendations_accurate_delivery_estimates_and_ensure_a_seamless_food_delivery_experience">To provide you with the best dining experience, we need your permission to access your device\'s location.By enabling location services we can offer persionalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.\'\'</string>
    <string name="foddie">Foddie</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="chandigarh">Chandigarh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_your_favourite_food">Explore Your Favourite Food</string>
    <string name="view_menu">View Menu</string>
    <string name="add">ADD</string>
    <string name="proceed">Proceed</string>
    <string name="veg_loaded_pizza">Veg Loaded Pizza</string>
    <string name="_1">1</string>
    <string name="menu">Menu</string>
    <string name="what_do_you_want_to_order">What do you want to order?</string>
    <string name="recent_buy">Recent Buy</string>
    <string name="buy_again">Buy Again</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="save_information">Save Information</string>
    <string name="notification">Notification</string>
    <string name="edit">Edit</string>
    <string name="payment_method">Payment Method</string>
    <string name="total_amount">Total Amount</string>
    <string name="place_my_order">Place My Order</string>
    <string name="congrats_nyour_order_placed">Congrats\nYour Order Placed</string>
    <string name="go_home">Go Home</string>
    <string name="food_name">Food Name</string>
    <string name="short_description">Short description</string>
    <string name="food_is_one_of_the_basic_necessities_of_life_food_contains_nutrients_substances_essential_for_the_growth_repair_and_maintenance_of_body_tissues_and_for_the_regulation_of_vital_processes_nutrients_provide_the_energy_our_bodies_need_to_function_the_energy_in_food_is_measured_in_units_called_calories">Food is one of the basic necessities of life. Food contains nutrients—substances essential for the growth, repair, and maintenance of body tissues and for the regulation of vital processes. Nutrients provide the energy our bodies need to function. The energy in food is measured in units called calories.</string>
    <string name="ingredients">Ingredients</string>
    <string name="_1nd_item_n2nd_item_n3rd_item">1nd item\n2nd item\n3rd item</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="previously_buy">Previously Buy</string>
    <string name="_250">250</string>
    <string name="received">Received</string>
    <string name="default_web_client_id">default_web_client_id</string>
    <string name="_0">0</string>
    <string name="quantity">Quantity :</string>
    <string name="recent_order">Recent Order</string>
    <string name="receive">Receive</string>
    <string name="r">₹</string>
    <string name="choose_your_location">Choose Your Location</string>
</resources>