<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.SignUpActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animation4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lottieView"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/open_sans_samibold"
        android:gravity="center_horizontal"
        android:text="@string/foddie_hut"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lg3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lg1"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center_horizontal"
        android:text="@string/sign_up_here"
        android:textColor="@color/green"
        android:textSize="14sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/lg3"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="Name"
        android:textColorHint="#858781"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/green"
        app:boxStrokeWidth="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_samibold"
            android:textColor="@color/light_black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        android:textColorHint="#858781"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/green"
        app:boxStrokeWidth="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_samibold"
            android:textColor="@color/light_black" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/txt_email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:textColorHint="#858781"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/green"
        app:boxStrokeWidth="1dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_samibold"
            android:textColor="@color/light_black" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lg4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_password"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center_horizontal"
        android:text="@string/or_nsign_up_with"
        android:textColor="@color/light_black"
        android:textSize="12sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lg5"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@id/lg4"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/googleBtn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:drawableLeft="@drawable/google2"
            android:fontFamily="@font/open_sans_bold"
            android:paddingLeft="15dp"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/facebookBtn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:drawableLeft="@drawable/facebook2"
            android:fontFamily="@font/open_sans_bold"
            android:paddingLeft="15dp"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpBtn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_below="@id/lg5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/greenbuttongradiant"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/already_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpBtn"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center_horizontal"
        android:text="@string/already_have_an_account"
        android:textColor="@color/green"
        android:textSize="12sp"
        android:textStyle="bold" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/spLinear"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/spCard"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="10dp"
            android:elevation="5dp"
            app:cardCornerRadius="10dp">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/animation4" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/spDeveloped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/developed_by"
                android:textColor="@color/light_black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/spName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/open_sans_samibold"
                android:text="@string/rudera"
                android:textColor="@color/green"
                android:textSize="14sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>