<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.PayOutActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/back_btn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/backarrow_ic"
        android:tint="@color/green"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:background="@color/white"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/spName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:fontFamily="@font/open_sans_samibold"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spName"
        android:layout_marginStart="15dp"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/name"
            android:textColorHint="#858781"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/green"
            app:boxStrokeWidth="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_samibold"
                android:inputType="text"
                android:textColor="@color/dark_black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/address"
            android:textColorHint="#858781"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/green"
            app:boxStrokeWidth="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_samibold"
                android:maxWidth="550dp"
                android:maxLines="4"
                android:textColor="@color/dark_black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_name"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/phone"
            android:textColorHint="#858781"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/green"
            app:boxStrokeWidth="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_samibold"
                android:inputType="number"
                android:maxLength="13"
                android:textColor="@color/dark_black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/bg_procesbtn"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/payment_method"
                android:textColor="@color/light_black"
                android:textSize="14sp"
                android:fontFamily="@font/open_sans_samibold"
                android:layout_marginStart="10dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/develery_img"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/cashon_delevery_ic" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_procesbtn"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/total_amount"
                android:textColor="@color/light_black"
                android:textSize="14sp"
                android:fontFamily="@font/open_sans_samibold"
                android:layout_marginStart="10dp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ruppe_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/r"
                    android:textSize="18sp"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:fontFamily="@font/open_sans_bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/payOut_totalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:maxLength="9"
                    android:layout_marginStart="2dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:fontFamily="@font/open_sans_bold"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            </RelativeLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/placeMyOrder_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_procesbtn"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:elevation="10dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/place_my_order"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>